# financialcalc

./: Cargo.toml  README.md
src/: excel.rs  main.rs
static/: index.html
